--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install dependencies
         run: nci
 
+      - name: setup playwright
+        run: pnpm exec playwright install   
+
       - name: Build
         run: nr build --base /${{github.event.repository.name}}/
 
